New Depsgraph currently ignores NLA tracks #53614

Closed
opened 2017-12-23 04:11:45 +01:00 by ¿? · 5 comments

Win7 64 gtx770
Broken: d130c66 (between dec-10/dec-22)

  • enable-new-depsgraph

Rigs will only display transforms from the active action clip. NLA tracks, pushed down, are visually ignored

startup command --enable-new-depsgraph

While you're just using an action, the animation is displayed normal as expected, and it also seems to work immediately after pushing it down to track, but after you refresh the scene, by switching through the scenes or reloading the file, the tracks are then ignored (but the values still update in the properties).

untitled.blend

Win7 64 gtx770 Broken: d130c66 (between dec-10/dec-22) - enable-new-depsgraph Rigs will only display transforms from the active action clip. NLA tracks, pushed down, are visually ignored startup command --enable-new-depsgraph While you're just using an action, the animation is displayed normal as expected, and it also seems to work immediately after pushing it down to track, but after you refresh the scene, by switching through the scenes or reloading the file, the tracks are then ignored (but the values still update in the properties). [untitled.blend](https://archive.blender.org/developer/F1497699/untitled.blend)
Author

Added subscriber: @Ebone

Added subscriber: @Ebone
Member

Added subscriber: @JoshuaLeung

Added subscriber: @JoshuaLeung
Joshua Leung self-assigned this 2017-12-24 00:05:53 +01:00
Member

DepsgraphRelationBuilder::build_animdata_curves_targets() is incorrect.

It only looks into the active action, and doesn't consider the NLA stack at all. To be correct, it would need to recursively go over NLA strips (meta strips can contain other NLA strips which may be action-linking strips OR metas themselves).

DepsgraphRelationBuilder::build_animdata_curves_targets() is incorrect. It only looks into the active action, and doesn't consider the NLA stack at all. To be correct, it would need to recursively go over NLA strips (meta strips can contain other NLA strips which may be action-linking strips OR metas themselves).

This issue was referenced by 45fdea48c1

This issue was referenced by 45fdea48c152b0e632a911139c7173f1e44f9310
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#53614
No description provided.